force-app/main/default/objects/AIPlatformLog__c/AIPlatformLog__c.object-meta.xml
<CustomObject>
    <description>General-purpose exception logging for the whole application, separate from AIExecutionStep__c which is scoped only to normal AI reasoning steps. Written asynchronously via a Platform Event subscriber so a logging call never fails or is lost to the caller&apos;s transaction rollback.</description>
    <label>AI Platform Log</label>
    <nameField>
        <displayFormat>AI Platform Log - {000000}</displayFormat>
        <label>AI Platform Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>🐞 AI Platform Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>