force-app/main/default/objects/AIPlatformLog__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Where the exception occurred.</description>
    <inlineHelpText>Set automatically by the class that caught the exception.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>