force-app/main/default/objects/AIPlatformLog__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>The exception class, such as System.DmlException.</description>
    <inlineHelpText>Set automatically from the caught exception.</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>