force-app/main/default/objects/AIPlatformLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Which method the exception occurred in.</description>
    <inlineHelpText>Set automatically.</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>