force-app/main/default/objects/AIPlatformLog__c/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>When the exception occurred.</description>
    <inlineHelpText>Set automatically.</inlineHelpText>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>