force-app/main/default/objects/AIPlatformLog__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>The record being processed when the exception occurred, if any.</description>
    <inlineHelpText>Left blank if not applicable.</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>