force-app/main/default/objects/AIPlatformLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>The full stack trace at the point of failure.</description>
    <inlineHelpText>Set automatically. Use this for debugging where the error originated.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>