force-app/main/default/objects/AIPlatformLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who triggered the action that caused this exception.</description>
    <inlineHelpText>Set automatically from the running user.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI Platform Logs</relationshipLabel>
    <relationshipName>AI_Platform_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>