force-app/main/default/objects/AIPlatformLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExceptionType__c</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>OccurredAt__c</columns>
    <columns>User__c</columns>
    <columns>RelatedRecordId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>